--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 	<script type="text/javascript" src="./js/app.js"></script>
 </head>
 <body>
-	
+	<header id="header">
+		<h1>Seek And Destroy</h1>
+	</header>
+
+	<main id="main">
+		
+	</main>
+
+	<footer id="footer">
+		
+	</footer>
 </body>
 </html>
