--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 	<header id="header">
 		<h1>Seek And Destroy</h1>
+		<i class="fas fa-chevron-down"></i>
 	</header>
 
 	<main id="main">
