Added task details

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
 	<header id="header">
 		<h1>Seek And Destroy</h1>
-		<i class="fas fa-chevron-down"></i>
+		<i id="chevron" class="fas fa-chevron-down" tabindex="0"></i>
+		<div id="task" class="hidden">
+			<h2 id="task-head">Task</h2>
+			<p id="task-details">You will be provided with an initial array (the first argument in the destroyer function), followed by one or more arguments. Remove all elements from the initial array that are of the same value as these arguments. Note You have to use the arguments object.</p>
+		</div>
 	</header>
 
 	<main id="main">
