--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 	</header>
 
 	<main id="main">
-		
+		<form id="form">
+			<input id="form-seek" class="form-input" type="text" name="form-seek" placeholder="Seek Values" />
+			<input id="form-destroy" class="form-input" type="text" name="form-destroy" placeholder="Destory Values" />
+			<input id="form-submit" type="submit" name="form-submit" value="Execute" />
+		</form>
 	</main>
 
 	<footer id="footer">
