--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 			<input id="form-destroy" class="form-input" type="text" name="form-destroy" placeholder="Destory Values" />
 			<input id="form-submit" type="submit" name="form-submit" value="Execute" />
 		</form>
+
+		<p id="seek" class="display">Seek Values: <span id="seek-values" class="display-value"></span></p>
+		<p id="destory" class="display">Destroy Values: <span id="destory-values" class="display-value"></span></p>
+		<p id="result" class="display">Result: <span id="result-value" class="display-value"></span></p>
 	</main>
 
 	<footer id="footer">
