--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</main>
 
 	<footer id="footer">
-		
+		<span id="copyright">&copy; <span id="copyright-year"></span> Lyndon Panton | All Rights Reserved</span>
 	</footer>
 </body>
 </html>
