--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 	<footer id="footer">
 		<span id="copyright">&copy; <span id="copyright-year"></span> Lyndon Panton | All Rights Reserved</span>
+		<span id="more"><a id="more-github" class="more-link" href="#" target="_blank"><i class="fab fa-github"></i></a> <a id="more-codepen" class="more-link" href="#" target="_blank"><i class="fab fa-codepen"></i></a> <a id="more-sololearn" class="more-link" href="#" target="_blank"><i class="fas fa-palette"></i></a></span>
 	</footer>
 </body>
 </html>
