Added classes to task headings anf paragraphs

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		<h1>Seek And Destroy</h1>
 		<i id="chevron" class="fas fa-chevron-down" tabindex="0"></i>
 		<div id="task" class="hidden">
-			<h2 id="task-head">Task</h2>
-			<p id="task-details">You will be provided with an initial array (the first argument in the destroyer function), followed by one or more arguments. Remove all elements from the initial array that are of the same value as these arguments. Note You have to use the arguments object.</p>
-			<h2 id="task-extra">Addition Notes</h2>
-			<p id="task-notes">Separate input values with spaces</p>
+			<h2 id="task-head" class="task-head">Task</h2>
+			<p id="task-details" class="task-text">You will be provided with an initial array (the first argument in the destroyer function), followed by one or more arguments. Remove all elements from the initial array that are of the same value as these arguments. Note You have to use the arguments object.</p>
+			<h2 id="task-extra" class="task-head">Addition Notes</h2>
+			<p id="task-notes" class="task-text">Separate input values with spaces</p>
 		</div>
 	</header>
 
