Changed display element id values

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 		</form>
 
 		<p id="seek" class="display">Seek Values: <span id="seek-values" class="display-value"></span></p>
-		<p id="destory" class="display">Destroy Values: <span id="destory-values" class="display-value"></span></p>
-		<p id="result" class="display">Result: <span id="result-value" class="display-value"></span></p>
+		<p id="destroy" class="display">Destroy Values: <span id="destroy-values" class="display-value"></span></p>
+		<p id="result" class="display">Result: <span id="result-values" class="display-value"></span></p>
 	</main>
 
 	<footer id="footer">
