--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	<footer id="footer">
 		<span id="copyright">&copy; <span id="copyright-year"></span> Lyndon Panton | All Rights Reserved</span>
-		<span id="more"><a id="more-github" class="more-link" href="#" target="_blank"><i class="fab fa-github"></i></a> <a id="more-codepen" class="more-link" href="#" target="_blank"><i class="fab fa-codepen"></i></a> <a id="more-sololearn" class="more-link" href="#" target="_blank"><i class="fas fa-palette"></i></a></span>
+		<span id="more"><a id="more-github" class="more-link" href="https://github.com/LyndonPanton/SeekAndDestroy" target="_blank"><i class="fab fa-github"></i></a> <a id="more-codepen" class="more-link" href="https://codepen.io/LP4/full/gNeMEe" target="_blank"><i class="fab fa-codepen"></i></a> <a id="more-sololearn" class="more-link" href="https://code.sololearn.com/WGSgU62h17H7/" target="_blank"><i class="fas fa-palette"></i></a></span>
 	</footer>
 </body>
 </html>
